fix(core): navscroll hide mobile scrollbar on desktop

--- a/src/scss/custom/_navscroll.scss
+++ b/src/scss/custom/_navscroll.scss
@@ -127,6 +127,9 @@
       .it-back-button {
         display: none !important;
       }
+      .custom-navbar-progressbar {
+        display: none !important;
+      }
       .link-list-wrapper {
         ul {
           li {
